02-terraform-aws/labs/lab3-vars/subnet.tf
# יצירת Subnet ציבורי
resource "aws_subnet" "demo_subnet" {
  vpc_id                  = aws_vpc.demo_vpc.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = data.aws_availability_zones.available.names[0]
  map_public_ip_on_launch = true

  tags = {
    Name = "demo-subnet"
  }
}
